; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bwn/extr_if_bwn.c_bwn_dma_32_get_curslot.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bwn/extr_if_bwn.c_bwn_dma_32_get_curslot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bwn_dma_ring = type { i32 }

@BWN_DMA32_RXSTATUS = common dso_local global i32 0, align 4
@BWN_DMA32_RXDPTR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bwn_dma_ring*)* @bwn_dma_32_get_curslot to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bwn_dma_32_get_curslot(%struct.bwn_dma_ring* %0) #0 {
  %2 = alloca %struct.bwn_dma_ring*, align 8
  %3 = alloca i32, align 4
  store %struct.bwn_dma_ring* %0, %struct.bwn_dma_ring** %2, align 8
  %4 = load %struct.bwn_dma_ring*, %struct.bwn_dma_ring** %2, align 8
  %5 = load i32, i32* @BWN_DMA32_RXSTATUS, align 4
  %6 = call i32 @BWN_DMA_READ(%struct.bwn_dma_ring* %4, i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* @BWN_DMA32_RXDPTR, align 4
  %8 = load i32, i32* %3, align 4
  %9 = and i32 %8, %7
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = sext i32 %10 to i64
  %12 = udiv i64 %11, 4
  %13 = trunc i64 %12 to i32
  ret i32 %13
}

declare dso_local i32 @BWN_DMA_READ(%struct.bwn_dma_ring*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
